--- a/src/scss/modules/modules.scss
+++ b/src/scss/modules/modules.scss
@@ -149,6 +149,44 @@ footer {
     margin: 0 0 30px 0;
 }
 
+.websites {
+    max-width: initial;
+}
+
+.gallery {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 15px auto;
+    width: 80%;
+  }
+  
+  .img {
+    width: 350px;
+    height: 350px;
+    margin: 15px;
+    opacity: 0.9;
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  @media screen and (max-width: 500px) {
+    .img {
+      opacity: 1;
+      width: auto;
+      height: auto;
+    }
+  }
+  
+
 @media (min-width: 700px) {
     .image {
         img {
