--- a/src/scss/modules/modules.scss
+++ b/src/scss/modules/modules.scss
@@ -159,33 +159,48 @@ footer {
     justify-content: center;
     margin: 15px auto;
     width: 80%;
-  }
-  
-  .img {
-    width: 350px;
+}
+
+.img {
+    width: 350px; 
     height: 350px;
     margin: 15px;
     opacity: 0.9;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; // position: relative;
+   
     &:hover {
-      opacity: 1;
+        opacity: 1;
+        ul {
+            opacity: 1;
+            transition: all .3s ease-in-out;
+        }
     }
-  }
-  
-  img {
+    ul {
+        @extend .center;
+        flex-direction: column;
+        display: none;
+        li {
+            &:first-of-type {
+                font-weight: 700;
+                text-transform: uppercase;
+            }
+        }
+    }
+}
+
+img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
-  }
-  
-  @media screen and (max-width: 500px) {
+}
+
+@media screen and (max-width: 500px) {
     .img {
-      opacity: 1;
-      width: auto;
-      height: auto;
+        opacity: 1;
+        width: auto;
+        height: auto;
     }
-  }
-  
+}
 
 @media (min-width: 700px) {
     .image {
