--- a/src/scss/modules/modules.scss
+++ b/src/scss/modules/modules.scss
@@ -163,7 +163,7 @@ footer {
 
 .img {
     width: 350px; 
-    height: 350px;
+    height: auto;
     margin: 15px;
     opacity: 0.9;
     transition: all 0.3s ease-in-out; // position: relative;
