--- a/src/scss/modules/modules.scss
+++ b/src/scss/modules/modules.scss
@@ -5,6 +5,7 @@ header {
         letter-spacing: 1px;
         margin: 0;
         font-weight: 400;
+        text-align: center; 
     }
     h1 {
         color: $heading-color;
